I have done some work of day_3

--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
                         <input type="number" placeholder="Adult" id="Adult" class="input">
                     </div>
                     <div>
-                        <a href="./search.html">
+                        <a href="./search.html" id="searchPageLink">
                             <button id="search">Search</button>
                         </a>
                     </div>
