Done the work of day-4

--- a/clickPage.html
+++ b/clickPage.html
@@ -69,22 +69,117 @@
             <p>Location</p>
             <p>Amenities</p>
             <p>Policies</p>
-        </div>  
+        </div>
         <div>
-            <button>Reserve a room</button>
+            <a href="./book-later.html">
+                <button>Reserve a room</button>
+            </a>
         </div>
 
     </div>
 
     <div id="map">
         <div>
+            <div class="mapouter">
+                <div class="gmap_canvas"><iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0"
+                        marginwidth="0"
+                        src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=University of Oxford&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a
+                        href="https://mcpedls.com/">Minecraft Download</a></div>
+            </div>
+
+        </div>
+
+        <div>
             <h2>About this area</h2>
             <h3>Lucknow</h3>
-            <p>Located in Gomti Nagar neighborhood, Renaissance Lucknow Hotel is connected to a shopping center. Ambedkar Memorial Park and Bara Imambara are notable landmarks, and some of the area's popular attractions include Botanical Gardens and Lucknow Zoo. Military Temple and Dream World are also worth visiting.</p>
+            <p>Located in Gomti Nagar neighborhood, Renaissance Lucknow Hotel is connected to a shopping center.
+                Ambedkar Memorial Park and Bara Imambara are notable landmarks, and some of the area's popular
+                attractions include Botanical Gardens and Lucknow Zoo. Military Temple and Dream World are also worth
+                visiting.</p>
+        </div>
+    </div>
+    <div class="down-map">
+        <h3>What's your nearby</h3>
+        <p>Ambedkar Memorial Park - 4 min walk</p>
+        <p>Chakra Tirth Temple - 3 min drive</p>
+        <p>La Martiniere - 6 min drive</p>
+        <p>Lucknow Zoo - 9 min drive</p>
+        <p>State Museum Lucknow - 10 min drive</p>
+    </div>
+    <div class="app">
+        <div>
+            <img src="https://a.travel-assets.com/mad-service/footer/marquee/ORB_App_Footer_v1.jpg" alt="">
         </div>
         <div>
-            <div class="mapouter"><div class="gmap_canvas"><iframe class="gmap_iframe" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?width=600&amp;height=400&amp;hl=en&amp;q=University of Oxford&amp;t=&amp;z=14&amp;ie=UTF8&amp;iwloc=B&amp;output=embed"></iframe><a href="https://mcpedls.com/">Minecraft Download</a></div><style>.mapouter{position:relative;text-align:right;width:600px;height:400px;}.gmap_canvas {overflow:hidden;background:none!important;width:600px;height:400px;}.gmap_iframe {width:600px!important;height:400px!important;}</style></div>
+            <h1>Rewards are waiting for you in the Orbitz app</h1>
+            <ul>
+                <li>Earn 4% back when you book your hotel in app, vs. 3% on site</li>
+                <li>Get flight status and gate number notifications</li>
+                <li>Have questions about your stay? Message your hotel right in the app
+            </ul>
+            </ul>
+            <h2>Text yourself a download link</h2>
+            <p>By providing your number, you agree to receive a one-time automated text message with a link to
+                get
+                the
+                app. Standard text message rates may apply.</p>
         </div>
+        <div>
+            <img src="https://a.travel-assets.com/mad-service/qr-code/portfolio_app_landing/qr_app_landing_footer_orbitz.png"
+                alt="">
+        </div>
+    </div>
+
+    <footer>
+        <div id="footer-section">
+            <div>
+                <h3>Company</h3>
+                <a href="#">About</a>
+                <a href="#">Jobs</a>
+                <a href="#">List your property</a>
+                <a href="#">Partnerships</a>
+                <a href="#">Newsroom</a>
+                <a href="#">Investor Relations</a>
+                <a href="#">Site Map</a>
+                <a href="#">Orbitz Rewards</a>
+                <a href="#">Advertising</a>
+            </div>
+            <div>
+                <h3>Explore</h3>
+                <a href="#">Hotels in United States</a>
+                <a href="#">Vacations Rental in United States</a>
+                <a href="#">Car Rentals in United States</a>
+                <a href="#">Domestic Flights</a>
+                <a href="#">Vacation Packages in United States</a>
+                <a href="#">Orbitz Riviews</a>
+                <a href="#">Orbitz Coupons</a>
+                <a href="#">LGBTQ Travel</a>
+                <a href="#">Unique Accommodations</a>
+                <a href="#">Travel Blog</a>
+            </div>
+            <div>
+                <h3>Policies</h3>
+                <a href="#">Privacy Policy</a>
+                <a href="#">Term of Use</a>
+                <a href="#">vrbo Term and Condition</a>
+                <a href="#">Orbitz Reward Terms</a>
+                <a href="#">Do not sell my personal information</a>
+
+            </div>
+            <div>
+                <h3>Help</h3>
+                <a href="#">Support</a>
+                <a href="#">Cancel your hotel or vacation rental booking</a>
+                <a href="#">Cancel your flight</a>
+                <a href="#">Refund timelines, policies & processes</a>
+                <a href="#">Use an Orbitz Coupon</a>
+            </div>
+        </div>
+    </footer>
+    <div class="h1  last">
+        <p>© 2022 Orbitz, LLC, an Expedia Group Company. All rights reserved.</p>
+        <p>Orbitz, Orbitz.com, and the Orbitz logo are trademarks or registered trademarks of Orbitz, LLC. CST#
+            2083930-50.</p>
     </div>
 </body>
 
