--- a/search.html
+++ b/search.html
@@ -56,6 +56,9 @@
 
     <div class="main">
         <div class="filter">
+            <a href="./book-later.html">
+                <h3><span><i class="fa-solid fa-hotel"></i></span><span>book Later</span> </h3>
+            </a>
             <h3>Filter By</h3>
             <h4>Popular Filters</h4>
             <div>
@@ -90,75 +93,88 @@
             </select>
         </div>
         <div id="display">
-            <a href="./clickPage.html">
+            <div>
                 <div>
-                    <div>
+                    <a href="./clickPage.html">
                         <img src="https://a.travel-assets.com/media/meso_cm/PAPI/Images/hotels/14000000/13240000/13235700/13235605/5be22f44_b.jpg"
                             alt="">
-                    </div>
-                    <div>
-                        <h2>Andaz Delhi - a concept by Hyatt</h2>
-                        <p>Delhi</p>
-                        <p>8.8</p>
-                        <p>Descrition:- Upscale Hotel Near Airports, Metro, Bussiness Hubs, Shopping Mall of the City Book 3 days in Advance and get 10% discount and enjoy the view.</p>
-                        <h2>$133</h2>
-                    </div>
+                    </a>
+                </div>
+                <div>
+                    <h2>Andaz Delhi - a concept by Hyatt</h2>
+                    <p>Delhi</p>
+                    <p>8.8</p>
+                    <p>Descrition:- Upscale Hotel Near Airports, Metro, Bussiness Hubs, Shopping Mall of the City Book 3
+                        days in Advance and get 10% discount and enjoy the view.</p>
+                    <h2>Price:- $133</h2>
+                    <button>Book Later</button>
                 </div>
 
                 <div>
-                    <div>
-                        <img src="https://images.trvl-media.com/hotels/1000000/440000/437300/437268/0753ae5b.jpg?impolicy=resizecrop&rw=455&ra=fit"
-                            alt="">
-                    </div>
-                    <div>
-                        <h2>The LaLiT New Delhi
-                        </h2>
-                        <p>Mumbai</p>
-                        <p>9.6</p>
-                        <p>Descrition:- Upscale Hotel Near Airports, Metro, Bussiness Hubs, Shopping Mall of the City Book 3 days in Advance and get 10% discount and enjoy the view.</p>
-                        <h2>$243</h2>
-                    </div>
+                </div>
+            </div>
+
+            <div>
+                <div>
+                    <img src="https://images.trvl-media.com/hotels/1000000/440000/437300/437268/0753ae5b.jpg?impolicy=resizecrop&rw=455&ra=fit"
+                        alt="">
                 </div>
                 <div>
-                    <div>
-                        <img src="https://images.trvl-media.com/hotels/2000000/1310000/1304400/1304393/f9968404.jpg?impolicy=resizecrop&rw=455&ra=fit"
-                            alt="">
-                    </div>
-                    <div>
-                        <h2>The Leela Palace New Delhi</h2>
-                        <p>New Delhi</p>
-                        <p>9.6</p>
-                        <p>Descrition:- Upscale Hotel Near Airports, Metro, Bussiness Hubs, Shopping Mall of the City Book 3 days in Advance and get 10% discount and enjoy the view.</p>
-                        <h2>$109</h2>
-                    </div>
+                    <h2>The LaLiT New Delhi
+                    </h2>
+                    <p>Mumbai</p>
+                    <p>9.6</p>
+                    <p>Descrition:- Upscale Hotel Near Airports, Metro, Bussiness Hubs, Shopping Mall of the City Book 3
+                        days in Advance and get 10% discount and enjoy the view.</p>
+                    <h2>Price:- $243</h2>
+                    <button>Book Later</button>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <img src="https://images.trvl-media.com/hotels/2000000/1310000/1304400/1304393/f9968404.jpg?impolicy=resizecrop&rw=455&ra=fit"
+                        alt="">
                 </div>
                 <div>
-                    <div>
-                        <img src="https://images.trvl-media.com/hotels/1000000/470000/465100/465005/13a4747e.jpg?impolicy=resizecrop&rw=455&ra=fit"
-                            alt="">
-                    </div>
-                    <div>
-                        <h2>Taj Palace, New Delhi</h2>
-                        <p>Banglore</p>
-                        <p>9.0</p>
-                        <p>Descrition:- Upscale Hotel Near Airports, Metro, Bussiness Hubs, Shopping Mall of the City Book 3 days in Advance and get 10% discount and enjoy the view.</p>
-                        <h2>$164</h2>
-                    </div>
+                    <h2>The Leela Palace New Delhi</h2>
+                    <p>New Delhi</p>
+                    <p>9.6</p>
+                    <p>Descrition:- Upscale Hotel Near Airports, Metro, Bussiness Hubs, Shopping Mall of the City Book 3
+                        days in Advance and get 10% discount and enjoy the view.</p>
+                    <h2>Price:- $109</h2>
+                    <button>Book Later</button>
+                </div>
+            </div>
+            <div>
+                <div>
+                    <img src="https://images.trvl-media.com/hotels/1000000/470000/465100/465005/13a4747e.jpg?impolicy=resizecrop&rw=455&ra=fit"
+                        alt="">
                 </div>
                 <div>
-                    <div>
-                        <img src="https://images.trvl-media.com/hotels/3000000/2600000/2593100/2593057/e7a47020.jpg?impolicy=resizecrop&rw=455&ra=fit"
-                            alt="">
-                    </div>
-                    <div>
-                        <h2>The Connaught, New Delhi - IHCL SeleQtions</h2>
-                        <p>New Delhi</p>
-                        <p>8.8</p>
-                        <p>Descrition:- Upscale Hotel Near Airports, Metro, Bussiness Hubs, Shopping Mall of the City Book 3 days in Advance and get 10% discount and enjoy the view.</p>
-                        <h2>$104</h2>
-                    </div>
+                    <h2>Taj Palace, New Delhi</h2>
+                    <p>Banglore</p>
+                    <p>9.0</p>
+                    <p>Descrition:- Upscale Hotel Near Airports, Metro, Bussiness Hubs, Shopping Mall of the City Book 3
+                        days in Advance and get 10% discount and enjoy the view.</p>
+                    <h2>Price:- $164</h2>
+                    <button>Book Later</button>
                 </div>
-            </a>
+            </div>
+            <div>
+                <div>
+                    <img src="https://images.trvl-media.com/hotels/3000000/2600000/2593100/2593057/e7a47020.jpg?impolicy=resizecrop&rw=455&ra=fit"
+                        alt="">
+                </div>
+                <div>
+                    <h2>The Connaught, New Delhi - IHCL SeleQtions</h2>
+                    <p>New Delhi</p>
+                    <p>8.8</p>
+                    <p>Descrition:- Upscale Hotel Near Airports, Metro, Bussiness Hubs, Shopping Mall of the City Book 3
+                        days in Advance and get 10% discount and enjoy the view.</p>
+                    <h2>Price:- $104</h2>
+                    <button>Book Later</button>
+                </div>
+            </div>
         </div>
     </div>
 </body>
@@ -436,6 +452,7 @@
 
     localStorage.setItem(mainData, JSON.stringify(mainData));
 
+    let cartData = JSON.parse(localStorage.getItem("cartData")) || [];
     let search = document.getElementById("search");
     let name = document.getElementById("location");
     let display = document.getElementById("display");
@@ -452,13 +469,14 @@
     function displayData(data) {
         display.innerHTML = null;
         data.forEach((element, index) => {
+            let main_div = document.createElement("div");
             let anchor = document.createElement("a");
             anchor.setAttribute("href", "./clickPage.html");
-            let main_div = document.createElement("div");
             let image_div = document.createElement("div");
             let image = document.createElement("img");
             image.setAttribute("src", element.image);
             image_div.append(image);
+            anchor.append(image_div);
             let data_div = document.createElement("div");
             let name = document.createElement("h2");
             name.setAttribute("class", "hotel-name");
@@ -468,13 +486,32 @@
             let rating = document.createElement("p");
             rating.innerText = element.rating;
             let price = document.createElement("h2");
+            price.innerText = "Price  " + "$" + element.price;
             let description = document.createElement("p");
             description.innerText = "Descrition:- Upscale Hotel Near Airports, Metro, Bussiness Hubs, Shopping Mall of the City Book 3 days in Advance and get 10% discount and enjoy the view."
-            price.innerText = "Price  " + "$" + element.price;
-            data_div.append(name, place, rating, description, price);
-            main_div.append(image_div, data_div)
-            anchor.append(main_div);
-            display.append(anchor);
+            let button = document.createElement("button");
+            button.innerText = "Book Later";
+            button.addEventListener("click", () => {
+                let isThere = false;
+                for (let i = 0; i < cartData.length; i++) {
+                    if (element.id == cartData[i].id) {
+                        isThere = true;
+                        break;
+                    }
+                }
+                if (isThere == true) {
+                    alert("This hotel is already present in your Book Later list");
+                } else {
+                    cartData.push(element);
+                    localStorage.setItem("cartData", JSON.stringify(cartData));
+                    alert("Successfully added in your book Later list")
+                }
+            })
+            data_div.append(name, place, rating, description, price, button);
+            button.innerText = "Book Later";
+            main_div.append(anchor, data_div);
+            
+            display.append(main_div);
         })
     }
     sortByPrice(mainData);
@@ -486,8 +523,8 @@
                 data.sort((a, b) => b.price - a.price);
                 displayData(data);
             }
-            else if(price_sort.value == "l2h"){
-                data.sort((a,b)=> a.price - b.price);
+            else if (price_sort.value == "l2h") {
+                data.sort((a, b) => a.price - b.price);
                 displayData(data);
             }
         })
@@ -501,8 +538,8 @@
                 data.sort((a, b) => b.rating - a.rating);
                 displayData(data);
             }
-            else if(rating_sort.value == "rating_low"){
-                data.sort((a,b)=> a.rating - b.rating);
+            else if (rating_sort.value == "rating_low") {
+                data.sort((a, b) => a.rating - b.rating);
                 displayData(data);
             }
         })
