Done with the work of day 5

--- a/book-later.html
+++ b/book-later.html
@@ -28,13 +28,7 @@
             <p id="sign-in"><a href="./sign-in.html">Sign in</a></p>
         </div>
     </div>
-    <div id="display">
-
-    </div>
-    <div>
-        <h1>Fill your details</h1>
-        
-    </div>
+    <div id="display"></div>
 </body>
 </html>
 <script>
