--- a/search.html
+++ b/search.html
@@ -278,7 +278,7 @@
                 image: "https://images.trvl-media.com/hotels/20000000/19940000/19931000/19930985/ce557b2d.jpg?impolicy=resizecrop&rw=455&ra=fit",
                 name: "Ginger Hotel Lucknow",
                 id: 12,
-                location: "Lucknow",
+                location: "Dehli",
                 rating: 8.0,
                 price: 35,
             },
